<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="demo_text">使用 AsyncTask 来下载图片,同时用自定义控件显示gif</string>
    <string name="demo_text_content_description">下载图片</string>
	<string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="header_view_img">header_view_img</string>
	<string name="app_start_txt">MYDEMO\n\n\n\n</string>
    <string name="demo_text_str">demo</string>
    <string name="demo1_txt_str">使用 AsyncTask 来下载图片</string>

    <!--JPush-->
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="title_activity_baidu_map_demo">BaiduMapDemoActivity</string>

    <!--baidu地图-->
    <string name="action_map_normal">普通地图</string>
    <string name="action_map_satelltle">卫星地图</string>
    <string name="action_map_traffic_enabled">交通图</string>
    <string name="action_heat_map_enabled">热力图</string>
    <string name="action_map_location">定位到当前地址</string>
    <string name="app_back_text">返回</string>
    <string name="title_activity_pull_to_zoom_recycler">PullToZoomRecyclerActivity</string>
    <string name="title_activity_life_cycle">LifeCycleActivity</string>
    <string name="title_activity_break_point_continue">BreakPointContinueActivity</string>
    <string name="title_activity_toast_demo">ToastDemoActivity</string>
    <string name="title_activity_jpush_base">JPushBaseActivity</string>
    <string name="title_activity_exception">ExceptionActivity</string>
    <string name="custom_exception_demo_title">错误捕获demo</string>
    <string name="custom_exception_button_txt">捕获异常</string>
    <string name="title_activity_merge_test">MergeTestActivity</string>
    <string name="title_activity_handle_test">HandleTestActivity</string>
    <string name="hello">hello</string>
    <string name="title_activity_main_fragment_demo">MainFragmentDemoActivity</string>

    <!-- fragmentTabDemo下面的按钮 -->
    <string name="home">首页</string>
    <string name="temai">tab1</string>
    <string name="catg">tab2</string>
    <string name="mine">tab3</string>

</resources>
