<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/view_header" />

    <FrameLayout
        android:id="@+id/view_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:orientation="vertical">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:alpha="70"
        android:background="#efffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/btn_container_conversation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_main_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/but_main_home"
                android:onClick="onTabClicked"
                android:paddingBottom="2dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/home"
                android:textColor="@color/main_footer_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_address_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_main_temai"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:drawableTop="@drawable/but_main_home"
                android:onClick="onTabClicked"
                android:paddingBottom="2dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/temai"
                android:textColor="@color/main_footer_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_main_catg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/but_main_home"
                android:onClick="onTabClicked"
                android:paddingBottom="2dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/catg"
                android:textColor="@color/main_footer_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_main_my"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/but_main_home"
                android:onClick="onTabClicked"
                android:paddingBottom="2dip"
                android:paddingTop="3dip"
                android:scaleType="matrix"
                android:text="@string/mine"
                android:textColor="@color/main_footer_text_color"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.25dip"
        android:layout_above="@+id/main_bottom"
        android:layout_alignParentLeft="true"
        android:background="#B2B2B2" />
</RelativeLayout>
